<resources>
    <string name="app_name">API_Practice</string>

    <string name="main_btm_nav_today_title">투데이</string>
    <string name="main_btm_nav_number_title">완독자수</string>
    <string name="main_btm_nav_search_title">검색</string>
    <string name="main_btm_nav_my_bookshelf_title">내서재</string>
    <string name="main_btm_nav_my_page_title">관리</string>
    <string name="main_tab_now">now</string>
    <string name="main_tab_audio">오디오북・챗북</string>
    <string name="main_tab_story">스토리</string>
    <string name="main_now_tab_title">독점 연재! 습관적 반성 이제 그만</string>
    <string name="main_now_tab_description">반성 중독자의 현생 존중 에세이</string>
    <string name="main_now_tab_recommend_for_you">당신을 위한 추천</string>
    <string name="main_now_tab_recommend_for_you_book_title">어떤 책부터 읽어야 할지 모를 땐 최신 베스트셀러부터</string>
    <string name="search_book_list">검색한 제목의 책이 없습니다.</string>
</resources>