<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src="@drawable/millie_mark"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/iv_alarm"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/alarm"/>
    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_home"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_toolbar"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_now"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_audio"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_story"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_home"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_fragment_now_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">
                <fragment
                    android:name="com.example.api_practice.src.main.today.now.NowFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </fragment>
                <fragment
                    android:name="com.example.api_practice.src.main.today.audio.AudioFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </fragment>
                <fragment
                    android:name="com.example.api_practice.src.main.today.story.StoryFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </fragment>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>